--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>bitch ass nigger</title>
+<title>snowbunny heaven <3 </title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,12 +11,10 @@
 <div id="particles-js"></div>
 <div id="bio-content">
 <h1>syn</h1>
-<p>SYN LOLOLOLOLOL</p>
-<a href="#link1"> Link 1</a>
-<a href="#link2"> Link 2</a>
+<p>website in construction.</p>
 </div>
 <audio id="background-audio" autoplay loop>
-<source src="assets/your-audio-file.mp3" type="audio/mp3">
+<source src="assets/audio.mp3" type="audio/mp3">
 </audio>
 <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
 <script src="script.js"></script>
