--- a/index.html
+++ b/index.html
@@ -1,22 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>snowbunny heaven <3 </title>
-<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Website Under Construction</title>
+    
+    <!-- tsParticles Library -->
+    <script src="https://cdn.jsdelivr.net/npm/tsparticles@2.11.1/tsparticles.bundle.min.js"></script>
+    
+    <style>
+        /* Reset default margins and paddings */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        /* Body and HTML styles */
+        body, html {
+            height: 100%;
+            background-color: #2f2f2f; /* Dark grey background */
+            color: #ffffff; /* White text */
+            font-family: 'Arial', sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            overflow: hidden;
+        }
+
+        /* tsParticles container */
+        #tsparticles {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 0; /* Particles behind the content */
+        }
+
+        /* Text content styles */
+        .content {
+            z-index: 1; /* Text in front of the particles */
+            position: relative;
+        }
+
+        .main-message {
+            font-size: 3em;
+            margin-bottom: 20px;
+        }
+
+        .sub-message {
+            font-size: 1.2em;
+            line-height: 1.5;
+        }
+
+        a {
+            color: #00acee; /* Discord/Telegram link colors */
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 600px) {
+            .main-message {
+                font-size: 2em;
+            }
+
+            .sub-message {
+                font-size: 1em;
+            }
+        }
+    </style>
 </head>
 <body>
-<div id="background"></div>
-<div id="particles-js"></div>
-<div id="bio-content">
-<h1> </h1>
-<p>website in construction.</p>
-</div>
-<audio id="background-audio" autoplay loop>
-<source src="assets/audio.mp3" type="audio/mp3">
-</audio>
-<script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
-<script src="script.js"></script>
+    <!-- Particle Background -->
+    <div id="tsparticles"></div>
+
+    <!-- Text Content -->
+    <div class="content">
+        <h1 class="main-message">Website in Construction.</h1>
+        <p class="sub-message">
+            Discord: <a href="https://discord.com/channels/@me/1303056358844665969">l33n.py</a>,<br>
+            Telegram: <a href="https://t.me/l34n3r">l34n3r</a>.<br>
+        </p>
+    </div>
+
+    <!-- Initialize tsParticles -->
+    <script>
+        tsParticles.load("tsparticles", {
+            background: {
+                color: {
+                    value: "#2f2f2f" // Dark grey to match the background
+                }
+            },
+            fpsLimit: 144,
+            interactivity: {
+                events: {
+                    onHover: {
+                        enable: true,
+                        mode: "repulse" // Particles repel from the cursor
+                    },
+                    resize: true
+                },
+                modes: {
+                    repulse: {
+                        distance: 100,
+                        duration: 0.4
+                    }
+                }
+            },
+            particles: {
+                color: {
+                    value: "#ffffff" // White particles
+                },
+                links: {
+                    color: "#89fff3",
+                    distance: 175,
+                    enable: true,
+                    opacity: 0.3,
+                    width: 1
+                },
+                move: {
+                    direction: "none",
+                    enable: true,
+                    outModes: {
+                        default: "bounce"
+                    },
+                    speed: 2.2073
+                },
+                number: {
+                    density: {
+                        enable: true,
+                        area: 800
+                    },
+                    value: 75
+                },
+                opacity: {
+                    value: 0.5
+                },
+                shape: {
+                    type: ["circle", "triangle", "star"]
+                },
+                size: {
+                    value: { min: 3, max: 7 }
+                }
+            },
+            detectRetina: true
+        });
+    </script>
 </body>
 </html>
