--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             overflow: hidden;
             cursor: url('assets/cross.png'), auto;
         }
-
+        
         #tsparticles {
             position: absolute;
             top: 0;
@@ -60,36 +60,34 @@
             text-decoration: underline;
         }
 
-        footer {
+        .bottom-right, .bottom-left {
             position: absolute;
-            bottom: 10px;
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            padding: 0 20px;
+            color: rgba(255, 255, 255, 0.6);
             font-size: 0.9em;
         }
 
-        .footer-left {
-            text-align: left;
+        .bottom-right {
+            bottom: 10px;
+            right: 10px;
         }
 
-        .footer-right {
-            text-align: right;
-            color: #bbbbbb;
+        .bottom-left {
+            bottom: 10px;
+            left: 10px;
         }
 
         .play-button {
-            background-color: #555555;
-            color: #ffffff;
-            border: none;
-            border-radius: 0px;
+            background-color: transparent;
+            color: rgba(255, 255, 255, 0.6);
+            border: 1px solid rgba(255, 255, 255, 0.6);
             padding: 5px 5px;
             cursor: pointer;
+            border-radius: 1px;
+            font-size: 0.9em;
         }
 
         .play-button:hover {
-            background-color: #777777;
+            background-color: rgba(255, 255, 255, 0.2);
         }
 
         @media (max-width: 600px) {
@@ -114,14 +112,10 @@
         </p>
     </div>
 
-    <footer>
-        <div class="footer-left">
-            <button class="play-button" id="playMusicButton">play music.</button>
-        </div>
-        <div class="footer-right">
-            website under constuction.
-        </div>
-    </footer>
+    <div class="bottom-right">Website under construction</div>
+    <div class="bottom-left">
+        <button class="play-button" id="playMusicButton">Play Some Music</button>
+    </div>
 
     <script>
         tsParticles.load("tsparticles", {
@@ -203,14 +197,29 @@
             "Do one thing every day that scares you.",
             "It always seems impossible until it's done."
         ];
-        
+
         const randomQuote = quotes[Math.floor(Math.random() * quotes.length)];
 
         document.getElementById("quote-display").textContent = randomQuote;
 
         const audio = new Audio('assets/audio.mp3');
+        let isPlaying = false;
+
         document.getElementById('playMusicButton').addEventListener('click', () => {
-            audio.play();
+            if (isPlaying) {
+                audio.pause();
+                isPlaying = false;
+                document.getElementById('playMusicButton').textContent = "play music";
+            } else {
+                audio.play();
+                isPlaying = true;
+                document.getElementById('playMusicButton').textContent = "stop music";
+            }
+        });
+
+        audio.addEventListener('ended', () => {
+            isPlaying = false;
+            document.getElementById('playMusicButton').textContent = "Play Some Music";
         });
     </script>
 </body>
