--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
         </p>
     </div>
 
-    <div class="bottom-right">Website under construction</div>
+    <div class="bottom-right">website under construction.</div>
     <div class="bottom-left">
-        <button class="play-button" id="playMusicButton">Play Some Music</button>
+        <button class="play-button" id="playMusicButton">play music.</button>
     </div>
 
     <script>
