HUGE WINTER UPDATE

--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
     <div class="song-controls">
         <select id="songSelector">
             <option value="" disabled selected>Select a song</option>
-            <option value="assets/songs/christmas2.mp3">Jingle Bells</option>
-            <option value="assets/songs/christmas1.mp3">All I Want for Christmas Is You</option>
-            <option value="assets/songs/christmas3.mp3">Last Christmas</option>
-            <option value="assets/songs/christmas4.mp3">Feliz Navidad</option>
+            <option value="assets/christmas2.mp3">Jingle Bells</option>
+            <option value="assets/christmas1.mp3">All I Want for Christmas Is You</option>
+            <option value="assets/christmas3.mp3">Last Christmas</option>
+            <option value="assets/christmas4.mp3">Feliz Navidad</option>
         </select>
         <button id="toggleSongButton" disabled>Start</button>
     </div>
