--- a/projects/apple/p1/index.html
+++ b/projects/apple/p1/index.html
@@ -56,6 +56,7 @@
             animation: glow 1.5s ease-in-out infinite alternate;
         }
 
+        @keyframes glow {
             0% {
                 text-shadow: 0 0 20px #ff007f, 0 0 40px #ff007f, 0 0 60px #ff007f;
             }
@@ -101,7 +102,13 @@
 
     <script>
         function handleClick(buttonName) {
-            alert("ma doare capu :(" );
+            if (buttonName === 'video') {
+                window.location.href = "https://developortation.github.io/projects/apple/p1/videos/index.html";
+            } else if (buttonName === 'detalii') {
+                window.location.href = "https://developortation.github.io/projects/apple/p1/detalii/index.html";
+            } else if (buttonName === 'poze') {
+                window.location.href = "https://developortation.github.io/projects/apple/p1/poze/index.html";
+            }
         }
 
         tsParticles.load("tsparticles", {
