--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>l34n3r</title>
+    <title>numb the pain</title>
     <script src="https://cdn.jsdelivr.net/npm/tsparticles@2.11.1/tsparticles.bundle.min.js"></script>
     <style>
         * {
@@ -30,7 +30,6 @@
             z-index: 0;
             pointer-events: none;
         }
-        /* Default Dark Mode */
         body.dark-mode {
             background-color: #2f2f2f;
             color: #ffffff;
@@ -42,7 +41,6 @@
         body.dark-mode button:hover {
             background-color: #e0e0e0;
         }
-        /* Light Mode */
         body.light-mode {
             background-color: #f7f7f7;
             color: #2f2f2f;
@@ -90,15 +88,15 @@
         #songSelector {
     padding: 5px 10px;
     font-size: 1em;
-    border: 1px solid #ccc; /* Light border for contrast */
+    border: 1px solid #ccc;
     border-radius: 4px;
-    background-color: #444; /* Match previous dark theme */
-    color: #fff; /* White text for better readability */
+    background-color: #444;
+    color: #fff;
     cursor: pointer;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 #songSelector:hover {
-    background-color: #666; /* Slightly lighter on hover */
+    background-color: #666;
 }
 
         #toggleLightDark {
@@ -141,7 +139,6 @@
         <button id="toggleSongButton" disabled>Start</button>
     </div>
     <script>
-        // Initialize Snow Effect
         const particles = tsParticles;
         function initializeSnow() {
             particles.load("tsparticles", {
@@ -162,7 +159,6 @@
         }
         initializeSnow();
 
-        // Quotes for the random message
 const quotes = [
     "Life is 10% what happens to us and 90% how we react to it.",
     "Jesus is king.",
@@ -264,37 +260,30 @@ const quotes = [
     "Life isn’t about finding yourself. It’s about creating yourself."
 ];
 
-// Adjusted probability for "Türkiye + România = ❤"
 function getRandomQuote() {
-    // 20% chance for "Türkiye + România = ❤"
     const luckyQuote = "Türkiye + România = ❤";
     const randomIndex = Math.random();
     
-    if (randomIndex < 0.2) { // 20% chance to pick the special quote
+    if (randomIndex < 0.3) {
         return luckyQuote;
     }
     
-    // Otherwise, pick a random quote
     const randomQuoteIndex = Math.floor(Math.random() * quotes.length);
     return quotes[randomQuoteIndex];
 }
 
-// Set the random quote
 const randomQuote = getRandomQuote();
 document.getElementById("quote-display").textContent = randomQuote;
 
 
-        // Light/Dark Mode Toggle
         const body = document.body;
         const toggleLightDarkButton = document.getElementById("toggleLightDark");
         toggleLightDarkButton.addEventListener("click", () => {
             body.classList.toggle("light-mode");
             body.classList.toggle("dark-mode");
-            particles.domItem(0)?.destroy(); // Destroy existing particles
-            initializeSnow(); // Reinitialize snow with updated settings
+            particles.domItem(0)?.destroy();
+            initializeSnow();
         });
-
-        // Song Controls Logic
         const songSelector = document.getElementById("songSelector");
         const toggleSongButton = document.getElementById("toggleSongButton");
         let audio = new Audio();
@@ -302,9 +291,9 @@ document.getElementById("quote-display").textContent = randomQuote;
             const selectedSong = songSelector.value;
             if (selectedSong) {
                 audio.src = selectedSong;
-                audio.pause(); // Pause any currently playing song
-                toggleSongButton.disabled = false; // Enable the start/stop button
-                toggleSongButton.textContent = "Start"; // Reset button text
+                audio.pause();
+                toggleSongButton.disabled = false;
+                toggleSongButton.textContent = "Start";
             }
         });
         toggleSongButton.addEventListener("click", () => {
